FEAT: Complete product detail page with variations, quantity control, dynamic pricing, and local storage cart.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="desktop-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Produtcs</a></li>
+                <li><a href="product.html">Produtcs</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -45,7 +45,7 @@
             <div class="hero-content">
                 <h1>Biggest Sale of the Year!</h1>
                 <p class="subheading">Exclusive deals on all new arrivals. Shop smart, live better.</p>
-                <a href="products.html" class="cta-button">Shop Now</a>
+                <a href="product.html" class="cta-button">Shop Now</a>
             </div>
         </section>    
 
@@ -57,6 +57,13 @@
         </section>
 
     </main>
+
+    <footer class="main-footer">
+        <p>&copy; 2025 E-Shop. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+        </div>
+    </footer>
 
     <script src="scripts/app.js"></script>
 </body>
