Feature: Finalized module dependency structure and fixed product detail cart integration.

--- a/cart.html
+++ b/cart.html
@@ -48,7 +48,9 @@
         </div>
     </main>
     
-    <script src="scripts/app.js"></script>
-    <script src="scripts/cart.js"></script> 
+    <script type="module" src="scripts/firebase-config.js"></script> 
+    <script type="module" src="scripts/utils.js"></script> 
+    <script type="module" src="scripts/app.js"></script>
+    <script type="module" src="scripts/cart.js"></script>
 </body>
 </html>
