--- a/product.html
+++ b/product.html
@@ -56,7 +56,9 @@
         </div>
     </footer>
 
-    <script src="scripts/app.js"></script> 
-    <script src="scripts/product-detail.js"></script>
+    <script type="module" src="scripts/firebase-config.js"></script> 
+    <script type="module" src="scripts/utils.js"></script> 
+    <script type="module" src="scripts/app.js"></script>
+    <script type="module" src="scripts/product-detail.js"></script>
 </body>
 </html>
